--- a/packages/react-components/react-nav/package.json
+++ b/packages/react-components/react-nav/package.json
@@ -32,8 +32,8 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-theme": "^9.1.5",
-    "@fluentui/react-utilities": "^9.7.0",
+    "@fluentui/react-theme": "*",
+    "@fluentui/react-utilities": "*",
     "@griffel/react": "^1.5.2",
     "tslib": "^2.1.0"
   },
