--- a/packages/react-components/react-nav/package.json
+++ b/packages/react-components/react-nav/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@fluentui/react-theme": "^9.1.11",
-    "@fluentui/react-utilities": "^9.1.11",
-    "@griffel/react": "*",
+    "@fluentui/react-utilities": "^9.11.1",
+    "@griffel/react": "^1.5.14",
     "tslib": "^2.1.0"
   },
   "peerDependencies": {
