--- a/tsconfig.base.all.json
+++ b/tsconfig.base.all.json
@@ -151,12 +151,13 @@
       "@fluentui/react-toolbar": ["packages/react-components/react-toolbar/src/index.ts"],
       "@fluentui/react-tooltip": ["packages/react-components/react-tooltip/src/index.ts"],
       "@fluentui/react-tree": ["packages/react-components/react-tree/src/index.ts"],
+      "@fluentui/react-tree-preview": ["packages/react-components/react-tree-preview/src/index.ts"],
       "@fluentui/react-utilities": ["packages/react-components/react-utilities/src/index.ts"],
       "@fluentui/react-virtualizer": ["packages/react-components/react-virtualizer/src/index.ts"],
       "@fluentui/theme-designer": ["packages/react-components/theme-designer/src/index.ts"],
       "@fluentui/tokens": ["packages/tokens/src/index.ts"],
       "@fluentui/workspace-plugin": ["tools/workspace-plugin/src/index.ts"],
-      "@fluentui/react-tree-preview": ["packages/react-components/react-tree-preview/src/index.ts"]
+      "@fluentui/react-nav-preview": ["packages/react-components/react-nav-preview/src/index.ts"]
     }
   }
 }
