--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "@griffel/webpack-extraction-plugin": "0.3.18",
     "@griffel/webpack-loader": "2.1.20",
     "@jest/reporters": "29.5.0",
+    "@lerna/package-graph": "6.4.1",
+    "@lerna/project": "6.4.1",
     "@mdx-js/loader": "1.6.22",
     "@microsoft/api-extractor": "7.31.2",
     "@microsoft/api-extractor-model": "7.24.2",
@@ -274,8 +276,6 @@
     "just-scripts": "1.8.2",
     "lage": "1.8.8",
     "lerna": "7.1.3",
-    "@lerna/project": "6.4.1",
-    "@lerna/package-graph": "6.4.1",
     "lerna-alias": "3.0.3-0",
     "license-webpack-plugin": "2.3.10",
     "lint-staged": "10.2.10",
@@ -365,6 +365,7 @@
     "yargs-unparser": "2.0.0"
   },
   "dependencies": {
+    "@react-native/normalize-colors": "0.73.2",
     "copy-to-clipboard": "3.3.1"
   },
   "license": "MIT",
