--- a/azure-pipelines.release-fluentui.yml
+++ b/azure-pipelines.release-fluentui.yml
@@ -60,6 +60,7 @@ extends:
             pool:
               name: '1ES-Host-Ubuntu'
               image: '1ES-PT-Ubuntu-20.04'
+              os: linux
             workspace:
               clean: all
             displayName: Build and Release Fluent Packages
@@ -145,6 +146,7 @@ extends:
             pool:
               name: '1ES-Host-Ubuntu'
               image: '1ES-PT-Ubuntu-20.04'
+              os: linux
             # run this job when the previous job is succeeded or when publishDocsiteOnly is true
             condition: or(succeeded(), eq(variables.publishDocsiteOnly, true))
 
