--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,125 +14,141 @@ variables:
 
   - template: .devops/templates/variables.yml
 
-pool: '1ES-Host-Ubuntu'
+resources:
+  repositories:
+    - repository: 1esPipelines
+      type: git
+      name: 1ESPipelineTemplates/1ESPipelineTemplates
+      ref: refs/tags/release
 
-jobs:
-  - job: BuildTestLint
-    workspace:
-      clean: all
-    steps:
-      - template: .devops/templates/tools.yml
+extends:
+  template: v1/1ES.Unofficial.PipelineTemplate.yml@1esPipelines
+  parameters:
+    pool:
+      name: Azure-Pipelines-1ESPT-ExDShared
+      image: windows-latest
+      os: windows # We need windows because compliance task only run on windows.
+    customBuildTags: null # send empty tags since it is not supported on GH repo's for PR's
+    customLogIssues: null # send empty tags since it is not supported on GH repo's for PR's
+    stages:
+      - stage: main
+        jobs:
+          - job: BuildTestLint
+            pool:
+              name: '1ES-Host-Ubuntu'
+              image: '1ES-PT-Ubuntu-20.04'
+              os: linux
+            workspace:
+              clean: all
+            steps:
+              - template: .devops/templates/tools.yml@self
 
-      - task: Bash@3
-        inputs:
-          filePath: yarn-ci.sh
-        displayName: yarn (install packages)
+              - task: Bash@3
+                inputs:
+                  filePath: yarn-ci.sh
+                displayName: yarn (install packages)
 
-      - script: |
-          yarn nx run @fluentui/workspace-plugin:check-graph
-          yarn nx g @fluentui/workspace-plugin:tsconfig-base-all --verify
-          yarn nx g @fluentui/workspace-plugin:normalize-package-dependencies --verify
+              - script: |
+                  yarn nx run @fluentui/workspace-plugin:check-graph
+                  yarn nx g @fluentui/workspace-plugin:tsconfig-base-all --verify
+                  yarn nx g @fluentui/workspace-plugin:normalize-package-dependencies --verify
 
-        displayName: Workspace lint
+                displayName: Workspace lint
 
-      - script: |
-          # @fluentui/api-docs is used within apps/public-docsite-resources/just.config.ts, thus it needs to be build in advance
-          yarn workspace @fluentui/api-docs build
-          # @fluentui/digest is used within packages/fluentui/perf-test-northstar/just.config.ts, thus it needs to be build in advance
-          yarn workspace @fluentui/digest build
-          yarn tsc -p ./tsconfig.json
-        displayName: Type-check just.config.ts files
+              - script: |
+                  # @fluentui/api-docs is used within apps/public-docsite-resources/just.config.ts, thus it needs to be build in advance
+                  yarn workspace @fluentui/api-docs build
+                  # @fluentui/digest is used within packages/fluentui/perf-test-northstar/just.config.ts, thus it needs to be build in advance
+                  yarn workspace @fluentui/digest build
+                  yarn tsc -p ./tsconfig.json
+                displayName: Type-check just.config.ts files
 
-      - script: |
-          yarn check:installed-dependencies-versions
-        displayName: 'check packages: installed dependencies versions'
+              - script: |
+                  yarn check:installed-dependencies-versions
+                displayName: 'check packages: installed dependencies versions'
 
-      - script: |
-          if [[ -n "$(targetBranch)" ]]; then
-            yarn format --since $(targetBranch) --check
-          else
-            yarn format --all --check
-          fi
-        displayName: check formatting
+              - script: |
+                  if [[ -n "$(targetBranch)" ]]; then
+                    yarn format --since $(targetBranch) --check
+                  else
+                    yarn format --all --check
+                  fi
+                displayName: check formatting
 
-      ## Danger.js checks for Fluent UI N*
-      - script: |
-          DANGER_DISABLE_TRANSPILATION="true" yarn danger ci
-        displayName: danger
-        condition: eq(variables.isPR, true)
-        env:
-          DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
+              ## Danger.js checks for Fluent UI N*
+              - script: |
+                  DANGER_DISABLE_TRANSPILATION="true" yarn danger ci
+                displayName: danger
+                condition: eq(variables.isPR, true)
+                env:
+                  DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
 
-      - script: |
-          yarn buildci $(sinceArg)
-        displayName: build, test, lint, test-ssr
+              - script: |
+                  yarn buildci $(sinceArg)
+                displayName: build, test, lint, test-ssr
 
-      - template: .devops/templates/cleanup.yml
+              - template: .devops/templates/cleanup.yml@self
 
-  - job: DeployE2E
-    displayName: Deploy and E2E
-    workspace:
-      clean: all
-    steps:
-      - template: .devops/templates/tools.yml
+          - job: DeployE2E
+            displayName: Deploy and E2E
+            workspace:
+              clean: all
+            pool:
+              name: '1ES-Host-Ubuntu'
+              image: '1ES-PT-Ubuntu-20.04'
+              os: linux
+            templateContext:
+              outputs:
+                - output: pipelineArtifact
+                  targetPath: $(System.DefaultWorkingDirectory)/apps/pr-deploy-site/dist
+                  artifactName: web
+            steps:
+              - template: .devops/templates/tools.yml@self
 
-      - task: Bash@3
-        inputs:
-          filePath: yarn-ci.sh
-        displayName: yarn
+              - task: Bash@3
+                inputs:
+                  filePath: yarn-ci.sh
+                displayName: yarn
 
-      # this also builds FUI N* docs if appropriate
-      - script: |
-          yarn bundle  $(sinceArg)
-        displayName: bundle
+              # this also builds FUI N* docs if appropriate
+              - script: |
+                  yarn bundle  $(sinceArg)
+                displayName: bundle
 
-      - script: |
-          yarn lage build-storybook  --verbose $(sinceArg)
-        displayName: build Storybooks
+              - script: |
+                  yarn lage build-storybook  --verbose $(sinceArg)
+                displayName: build Storybooks
 
-      ## This runs regardless of scope, the app will adapt to the scope as well
-      - script: |
-          yarn workspace @fluentui/pr-deploy-site generate:site
-        displayName: generate PR Deploy Site
+              ## This runs regardless of scope, the app will adapt to the scope as well
+              - script: |
+                  yarn workspace @fluentui/pr-deploy-site generate:site
+                displayName: generate PR Deploy Site
 
-      - bash: |
-          mkdir -p apps/pr-deploy-site/sbom
-        displayName: 📒 Create dir for manifest Deploy-Site
+              - script: |
+                  cat apps/pr-deploy-site/dist/public-docsite-v9/storybook/407.e8d34dd4887549374f08.manager.bundle.js
+                displayName: TEsT
 
-      - task: ManifestGeneratorTask@0
-        displayName: 📒 Generate Manifest Deploy-Site
-        inputs:
-          BuildDropPath: apps/pr-deploy-site/dist
-          ManifestDirPath: 'apps/pr-deploy-site/sbom'
-          Verbosity: Verbose
+              - task: AzureUpload@2
+                displayName: Upload PR deploy site
+                inputs:
+                  azureSubscription: $(azureSubscription)
+                  BlobPrefix: $(deployBasePath)
+                  ContainerName: '$web'
+                  SourcePath: 'apps/pr-deploy-site/dist'
+                  storage: $(azureStorage)
 
-      - task: PublishPipelineArtifact@1
-        displayName: 📒 Publish Manifest Deploy-Site
-        inputs:
-          artifactName: SBom-Deploy-Site-$(System.JobAttempt)
-          targetPath: apps/pr-deploy-site/sbom
+              - task: GithubPRStatus@0
+                displayName: 'Update PR deploy site github status'
+                inputs:
+                  githubOwner: microsoft
+                  githubRepo: fluentui
+                  githubContext: 'Pull request demo site'
+                  githubDescription: 'Click "Details" to go to the deployed demo site for this pull request'
+                  # This MUST have a trailing slash, or the links to PR deploy site assets won't work
+                  githubTargetLink: $(deployUrl)/
 
-      - task: AzureUpload@2
-        displayName: Upload PR deploy site
-        inputs:
-          azureSubscription: $(azureSubscription)
-          BlobPrefix: $(deployBasePath)
-          ContainerName: '$web'
-          SourcePath: 'apps/pr-deploy-site/dist'
-          storage: $(azureStorage)
+              - script: |
+                  yarn e2e $(sinceArg)
+                displayName: Cypress E2E tests
 
-      - task: GithubPRStatus@0
-        displayName: 'Update PR deploy site github status'
-        inputs:
-          githubOwner: microsoft
-          githubRepo: fluentui
-          githubContext: 'Pull request demo site'
-          githubDescription: 'Click "Details" to go to the deployed demo site for this pull request'
-          # This MUST have a trailing slash, or the links to PR deploy site assets won't work
-          githubTargetLink: $(deployUrl)/
-
-      - script: |
-          yarn e2e $(sinceArg)
-        displayName: Cypress E2E tests
-
-      - template: .devops/templates/cleanup.yml
+              - template: .devops/templates/cleanup.yml@self
